# ai_critic

./: README.md  pyproject.toml
ai_critic/: __init__.py  critic.py
ai_critic.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ai_critic/evaluators/: __init__.py  adapters.py  config.py  data.py  performance.py  robustness.py  scoring.py  summary.py  validation.py
ai_critic/sessions/: __init__.py  store.py
test/: test_in_ia.py  test_model.py
