[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-critic"
version = "1.1.0"
description = "Fast AI evaluator for scikit-learn models"
readme = "README.md"
authors = [
    { name="Luiz Seabra", email="filipedemarco@yahoo.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scikit-learn"
]